Command Pattern ->Modify Home Page  Object -> Added List.of instead Arrays.asList